subindo ultima atualizacao desafio desktop

--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 
     <div class="page">
 
-        <header>
+        <div class="infos">
 
-            <img src="images/logo 2.svg" alt="">
-            <h1>SPACE CREAM</h1>
+            <header>
 
-        </header>
+                <img src="images/logo 2.svg" alt="">
+                <h1>SPACE CREAM</h1>
 
-
-
-        <main>
+            </header>
 
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing <br> 
@@ -32,7 +30,10 @@
                 Praesent at quam aliquet. 
             </p>
 
+        </div>
 
+
+        <main>
 
                 <div class="posts">
                     <img src="images/sorvete1.png" alt="">
